--- a/code-assistant/requirements.txt
+++ b/code-assistant/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.109.0
-uvicorn==0.27.0
+streamlit==1.28.1
 google-generativeai==0.4.0
 sentence-transformers==2.2.2
 GitPython==3.1.40
 python-dotenv==1.0.0
+requests==2.31.0
